lab1/Test/L1-A-12-68.output
Error Type A at Line 1
Error Type B at Line 3
Error Type A at Line 15
Error Type A at Line 29
Error Type A at Line 36
Error Type B at Line 37
