lab1/Test/L1-A-12-68.cmm
struct GRC0dWctvjwT_aqPGe o50z ( int $T ) {
  float ZA [ 1754716523 ] , O7PC6sGWbL = N5Z0LMml1q544c 
    >= t1Z5 [ YyqH = || HKpBVMx7pMvlJOqugj && zfb7cWhPY13A 
    == BMSBzR7KAHI0xpk8 + RSD3NXGzK / WS_Pi ( Uv0zbAAeH 
    = OgKeNr_k82Ie = FxnyEUvZzsbZNkyaDLvx != aTu8Zy - 
    ( eEdTyYJ7bv6bX2GC10 = VvL && cpfFcFeSFjI < FOt7FX 
    * ( C6JpHB6ZMUUN2fe4LAY - ! ! - - ( PKY_Fn3rjuB && 
    DVHx > sbGBsvJOL7ijpisG61lk * ( o9p8QImzByM8Q6HzZX 
    = Dqq3hKqr9Y8dmwk || OdLn <= rcL2Hhx [ Xx0Zz8R0ZsHJ 
    >= - ( YKRqYcXYa35ue5W && fGhG3F ( r , NoiEgwazSt 
    ) ) ] ) ) . Y ) ) - 2020402108 / 2140729440.2050034053 
    / bV1IUjgdCkBuoSCL3WC6 ( ) ) * ! - - dDFYAl_rCRZ8_xTC 
    . fcdPtr ] ;
}
struct ldlaKTuXlBOG %rT6VTE 
;
struct {
};
struct bWjNRMS1_yFytxdfMVi ;
int ;
int ;
int ;
int Jldo ( ) {
  ZZEoQyv5Y ;
  NH3S5lcRb ;
  GAirYh9iBTtm5UDkc ;
  if ( L7Sm2UPinCs ) {
    kATi5 ;
    if ( peUfV )     if ( BdEdZj2oo \)     while ( 
      Tvm )     FI_V0yONRN9Rc ;

else     if ( AptGXDQ2z1sw1Y32xsoR )     return FFVnxLvDibibO97sJ1 
      


$
  }else   UGNjKoX ;

}
struct Jrfn2jH {
}QZ5PrQcK4FJdvEyOT , O9nb1VSz 

;
int uVN ( int l6kHrgJ , int F348QC1Y ) {
}
int ;
int ;
int cqeYECXnd ( ) {
}
int ;
int ;
